--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,20 @@
   --box-shadow-1: 0 3px 15px rgba(0,0,0,-3);
 }
 
+.light-mode {
+  --color-primary: #FFFFFF;
+  --color-secondary: #F56692;
+  --color-white: #454e56;
+  --color-black: #000;
+  --color-grey0: #f8f8f8;
+  --color-grey-1: #6c7983;
+  --color-grey-2: #6c7983;
+  --color-grey-3: #6c7983;
+  --color-grey-4: #454e56;
+  --color-grey-5: #f8f8f8;
+  --color-grey-6: #12181b;
+}
+
 body {
   background-color: var(--color-primary);
   overflow-x: hidden;
@@ -40,7 +54,7 @@ a {
 }
 
 header {
-  height: 100vh;
+  min-height: 100vh;
   color: var(--color-white);
   overflow-x: hidden;
   padding: 0 !important;
@@ -55,7 +69,8 @@ section {
   padding: 3rem 18rem;
 }
 
-.section {
+.container {
+  display: none;
   -webkit-transform: translateY(-100%) scale(0);
           transform: translateY(-100%) scale(0);
   -webkit-transition: all .4s ease-in-out;
@@ -63,34 +78,34 @@ section {
   background-color: var(--color-primary);
 }
 
-.sec1 {
-  display: none;
-  -webkit-transform: translateY(0) scale(1);
-          transform: translateY(0) scale(1);
+.active {
+  display: block;
+  -webkit-animation: appear 1s ease-in-out;
+          animation: appear 1s ease-in-out;
+  -webkit-transform: translateY(0) scaleY(1);
+          transform: translateY(0) scaleY(1);
 }
 
-.sec2 {
-  display: none;
-  overflow-x: hidden;
-  -webkit-transform: translateY(0) scale(1);
-          transform: translateY(0) scale(1);
+@-webkit-keyframes appear {
+  0% {
+    -webkit-transform: translateY(-100%) scaleY(0);
+            transform: translateY(-100%) scaleY(0);
+  }
+  100% {
+    -webkit-transform: translateY(0) scaleY(1);
+            transform: translateY(0) scaleY(1);
+  }
 }
 
-.sec3 {
-  display: none;
-  -webkit-transform: translateY(0) scale(1);
-          transform: translateY(0) scale(1);
-}
-
-.sec4 {
-  display: none;
-  -webkit-transform: translateY(0) scale(1);
-          transform: translateY(0) scale(1);
-}
-
-.sec5 {
-  -webkit-transform: translateY(0) scale(1);
-          transform: translateY(0) scale(1);
+@keyframes appear {
+  0% {
+    -webkit-transform: translateY(-100%) scaleY(0);
+            transform: translateY(-100%) scaleY(0);
+  }
+  100% {
+    -webkit-transform: translateY(0) scaleY(1);
+            transform: translateY(0) scaleY(1);
+  }
 }
 
 .controlls {
@@ -193,7 +208,7 @@ section {
   display: grid;
   -ms-grid-columns: (1fr)[2];
       grid-template-columns: repeat(2, 1fr);
-  height: 100%;
+  min-height: 100vh;
 }
 
 .header-content .left-header {
@@ -357,6 +372,10 @@ section {
 .about-container .left-about h4 {
   font-size: 2.5rem;
   text-transform: uppercase;
+}
+
+.about-stats {
+  padding-bottom: 4rem;
 }
 
 .stat-title {
