--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -19,6 +19,21 @@
     --br-sm-21: 14px;
     --box-shadow-1: 0 3px 15px rgba(0,0,0,-3);
 }
+
+.light-mode {
+    --color-primary: #FFFFFF;
+    --color-secondary: #F56692;
+    --color-white: #454e56;
+    --color-black: #000;
+    --color-grey0: #f8f8f8;
+    --color-grey-1: #6c7983;
+    --color-grey-2: #6c7983;
+    --color-grey-3: #6c7983;
+    --color-grey-4: #454e56;
+    --color-grey-5: #f8f8f8;
+    --color-grey-6: #12181b;
+}
+
 body{
     background-color: var(--color-primary);
     overflow-x: hidden;
@@ -34,7 +49,7 @@ a{
     font-family: inherit;
 }
 header{
-    height: 100vh;
+    min-height: 100vh;
     color: var(--color-white);
     overflow-x: hidden;
     padding: 0 !important;
@@ -47,31 +62,21 @@ section{
     top: 0;
     padding: 3rem 18rem;
 }
-.section{
+.container{
+    display: none;
     transform: translateY(-100%) scale(0);
     transition: all .4s ease-in-out;
     background-color: var(--color-primary);
 }
-.sec1{
-    display: none;
-    transform: translateY(0) scale(1);
-}
-.sec2{
-    display: none;
-    overflow-x: hidden;
-    transform: translateY(0) scale(1);
-}
-.sec3{
-    display: none;
-    transform: translateY(0) scale(1);
-}
-.sec4{
-    display: none;
-    transform: translateY(0) scale(1);
-}
-.sec5{
-    // display: none;
-    transform: translateY(0) scale(1);
+
+.active {
+    display: block;
+    animation: appear 1s ease-in-out;
+    transform: translateY(0) scaleY(1);
+    @keyframes appear {
+        0%{ transform: translateY(-100%) scaleY(0); }
+        100%{ transform: translateY(0) scaleY(1); }
+    }
 }
 
 //controls
@@ -137,7 +142,7 @@ section{
 .header-content{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    height: 100%;
+    min-height: 100vh;
     .left-header{
         display: flex;
         align-items: center;
@@ -253,6 +258,10 @@ section{
             text-transform: uppercase;
         }
     }  
+}
+
+.about-stats{
+    padding-bottom: 4rem;
 }
 
 .stat-title{
