--- a/styles/styles.css
+++ b/styles/styles.css
@@ -406,6 +406,7 @@ section {
       grid-template-columns: repeat(2, 1fr);
   grid-gap: 2rem;
   padding-bottom: 3rem;
+  padding-left: 1rem;
 }
 
 .timeline .timeline-item {
