--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -287,6 +287,7 @@ section{
     grid-template-columns: repeat(2, 1fr);
     grid-gap: 2rem;
     padding-bottom: 3rem;
+    padding-left: 1rem;
     .timeline-item{
         position: relative;
         padding-left: 3rem;
